fixed the bug of functions

--- a/notebook/Foodie_lovers.ipynb
+++ b/notebook/Foodie_lovers.ipynb
@@ -61,26 +61,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (my_functions_EDA.py, line 493)",
+     "evalue": "invalid syntax (My_functions_EDA.py, line 490)",
      "output_type": "error",
      "traceback": [
       "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
       "  File \u001b[0;32m\"d:\\anaconda\\envs\\dataanalytic\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3417\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-10-5ec902b2c680>\"\u001b[1;36m, line \u001b[1;32m4\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    from my_functions_EDA import *\u001b[0m\n",
-      "\u001b[1;36m  File \u001b[1;32m\"D:\\Data Course\\Projects\\Food\\Food-Project\\my_functions_EDA.py\"\u001b[1;36m, line \u001b[1;32m493\u001b[0m\n\u001b[1;33m    jupyter nbconvert --to python \"path/to/notebook.ipynb\"\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-16-fd94c6a07fed>\"\u001b[1;36m, line \u001b[1;32m4\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    from My_functions_EDA import *\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32m\"D:\\Data Course\\Projects\\Food\\Food-Project\\My_functions_EDA.py\"\u001b[1;36m, line \u001b[1;32m490\u001b[0m\n\u001b[1;33m    jupyter nbconvert --to python \"path/to/notebook.ipynb\"\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, 'D:\\Data Course\\Projects\\Food\\Food-Project')\n",
+    "sys.path.append('D:\\Data Course\\Projects\\Food\\Food-Project')\n",
     "\n",
-    "from my_functions_EDA import *\n",
+    "from My_functions_EDA import *\n",
     "from fx_MLRegression import *"
    ]
   },
